@@ -109,7 +109,7 @@ mod_auth_msql.o: mod_auth_msql.c httpd.h conf.h alloc.h buff.h \
 mod_autoindex.o: mod_autoindex.c httpd.h conf.h alloc.h buff.h \
  http_config.h http_core.h http_request.h http_protocol.h http_log.h \
  http_main.h util_script.h
-mod_browser.o: mod_browser.c httpd.h conf.h alloc.h buff.h \
+mod_setenvif.o: mod_setenvif.c httpd.h conf.h http_core.h alloc.h buff.h \
  http_config.h
 mod_cern_meta.o: mod_cern_meta.c httpd.h conf.h alloc.h buff.h \
  http_config.h util_script.h http_log.h http_request.h
