@@ -1,5 +1,10 @@
 Changes with Apache 1.3a2
 
+  *) mod_browser has been replaced by the more general mod_setenvif
+     (courtesy of Paul Sutton).  BrowserMatch* directives are still
+     available, but are now joined by SetEnvIf*, UnSetEnvIf*, and
+     UnSetEnvIfZero directives.  [Ken Coar]
+
   *) "HostnameLookups double" forces double-reverse DNS to succeed in
      order for remote_host to be set (for logging, or for the env var
      REMOTE_HOST).  The old define MAXIMUM_DNS has been deprecated.
